SD-2257: Refactored generic JsonAttribute checks and changed tests